Fix aceec06 not getting applied on small devices

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1061,7 +1061,7 @@ html.swal2-height-auto {
 		bottom: 0;
 		justify-content: space-evenly;
 		padding: 0 25px;
-    	padding-bottom: env(safe-area-inset-bottom, 0px);
+    	padding-bottom: env(safe-area-inset-bottom, 0px) !important;
 		background-color: var(--navbar-bg);
 		backdrop-filter: blur(10px);
 		-webkit-backdrop-filter: blur(10px);
